@@ -1,3 +1,8 @@
+2009-06-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_lzw.c: Fix buffer underflow bug. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=2065
+
 2009-06-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_write.c: do not override the planar configuration to be
